--- a/pyproject.toml
+++ b/pyproject.toml
@@ -143,6 +143,7 @@ ignore = [
     'F405',    # Star imports
     'D200',    # One-line docstring should fit on one line
     'S101',    # Assert statements
+    'RET505',  # Unnecessary `elif` after `return` statement
 ]
 ignore-init-module-imports = true
 line-length = 120
