--- a/pyproject.toml
+++ b/pyproject.toml
@@ -96,7 +96,7 @@ select = [
     'D2',   # Docstring conventions
     'DTZ',  # Datetimes
     'EM',   # Error messages
-    'ERA',  # Commented-out code
+    # 'ERA',  # Commented-out code - disabled because it generates false positives for comments with C structs
     'EXE',  # Executable
     'F',    # Pyflakes
     'FA',   # __future__ annotations
@@ -141,9 +141,12 @@ ignore = [
     'PLR0913', # Too many arguments
     'Q000',    # Single quotes found but double quotes preferred
     'F405',    # Star imports
+    'F403',    # Star imports
     'D200',    # One-line docstring should fit on one line
     'S101',    # Assert statements
     'RET505',  # Unnecessary `elif` after `return` statement
+    'RET506',  # Unnecessary `else` after `raise` statement
+    'S311',    # Allow use of `random` module
 ]
 ignore-init-module-imports = true
 line-length = 120
