Start on device discovery algorithm

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -155,6 +155,7 @@ ignore = [
     'ISC001',  # Single line implicit string concatenation - incompatible with formatter
     'TRY301',  # Don't call raise within a try block -- can I help it if other libraries don't use exceptions??
     'TRY300',  # Returns within try blocks
+    'PLR2004', # Magic value used in comparison
 ]
 ignore-init-module-imports = true
 line-length = 120
