--- a/mypy.ini
+++ b/mypy.ini
@@ -1,6 +1,10 @@
 [mypy]
 strict = True
 
+# This error gets a little too complainy
+# https://github.com/python/mypy/issues/16596
+implicit_reexport = True
+
 # Don't enforce types for python-libusb1 which has no type information
 [mypy-usb1]
 ignore_missing_imports = True
