Support for opening UART CDC mode devices

--- a/mypy.ini
+++ b/mypy.ini
@@ -8,3 +8,9 @@ implicit_reexport = True
 # Don't enforce types for python-libusb1 which has no type information
 [mypy-usb1]
 ignore_missing_imports = True
+
+# Don't enforce types for pyserial which has no type information
+[mypy-serial]
+ignore_missing_imports = True
+[mypy-serial.tools]
+ignore_missing_imports = True
