Update udev rules

--- a/.github/workflows/linting_and_formatting.yml
+++ b/.github/workflows/linting_and_formatting.yml
@@ -1,4 +1,4 @@
-# This workflow runs the Ruff linter
+# This workflow runs linters and formatters
 
 name: Ruff
 
@@ -7,13 +7,8 @@ on:
     branches:
       - '**'
 
-permissions:
-  contents: write
-  issues: write
-  pull-requests: write
-
 jobs:
-  ruff:
+  format-and-lint:
     runs-on: ubuntu-latest
     steps:
 
@@ -33,10 +28,11 @@ jobs:
         poetry run pip install --upgrade pip setuptools
         poetry install --only linters
 
-    # Note: We format the entire repo, but only run the linter on the application code, not the tests.
-    # This lets the tests be a bit looser with e.g. magic numbers
     - name: Lint and Format with Ruff
       run: |
         poetry run ruff format --diff .
-        cd src
         poetry run ruff check --fix .
+
+    - name: Check Types with Mypy
+      run: |
+        poetry run mypy -p cy_serial_bridge
