Augh udev rules don't support end of line comments... that only took me 1 hour to figure out...

--- a/.github/workflows/linting_and_formatting.yml
+++ b/.github/workflows/linting_and_formatting.yml
@@ -26,7 +26,7 @@ jobs:
     - name: Install library and dependencies
       run: |
         poetry run pip install --upgrade pip setuptools
-        poetry install --only linters
+        poetry install --with linters
 
     - name: Lint and Format with Ruff
       run: |
