--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,7 +46,7 @@ packages = [
 repository = 'https://github.com/mbed-ce/cy_serial_bridge/'
 
 [tool.poetry.scripts]
-cy_serial_bridge_cli = 'cy_serial_bridge.cli:main'
+cy_serial_cli = 'cy_serial_bridge.cli:main'
 
 [tool.poetry.urls]
 "Tracker" = 'https://github.com/mbed-ce/cy_serial_bridge/issues'
