--- a/.github/workflows/github_release.yml
+++ b/.github/workflows/github_release.yml
@@ -19,8 +19,7 @@ jobs:
       matrix:
         os: [ ubuntu-latest ]
         python-version: [
-          '3.10',
-          'pypy-3.10',
+          '3.10'
         ]
     steps:
 
@@ -101,6 +100,7 @@ jobs:
 
   pypi-deploy:
     name: Build and publish Python 🐍 distributions 📦 to live PyPI
+    needs: build
     runs-on: ubuntu-latest
 
     environment:
