Switch to typer for the CLI, which gives an awesome user experience

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "cy_serial_bridge"
 # this is used by Ruff to disable "upgrade to feature x" inspections where x was added
 # after the given version
-requires-python = ">=3.8"
+requires-python = ">=3.10"
 version = "0.1.0"
 description = "Pure Python driver for using and reconfiguring the CY7C652xx family of USB to SPI/I2C/UART bridge ICs."
 authors = [
@@ -55,6 +55,8 @@ cy_serial_cli = 'cy_serial_bridge.cli:main'
 python = '^3.8.1'
 libusb1 = "^3.0.0"
 pyserial = "^3.5"
+typer = "^0.9"
+rich = "^13.6"
 
 [tool.poetry.group.dev.dependencies]
 mypy = '^1.8.0'
@@ -159,13 +161,15 @@ ignore = [
     'PLR2004', # Magic value used in comparison
     'ANN101',  # Don't require annotations for self.  Waaaaay too complainy, plus deprecated in ruff
     'ANN401',  # Allow typing.any
+    'UP007',   # Allow old style union annotations (typing.Optional/typing.Union).  Typer does not support the new style ones.
+    'PYI025',  # Allow using collections.abc.Set
 ]
 ignore-init-module-imports = true
 line-length = 120
 # preview = true
 show-fixes = true
 src = ['src',]
-target-version = 'py38'
+target-version = 'py310'
 
 [tool.ruff.flake8-quotes]
 docstring-quotes = 'double'
