--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "cy_serial_bridge"
 # this is used by Ruff to disable "upgrade to feature x" inspections where x was added
 # after the given version
 requires-python = ">=3.10"
-version = "0.3.0"
+version = "0.3.1"
 description = "Pure Python driver for using and reconfiguring the CY7C652xx family of USB to SPI/I2C/UART bridge ICs."
 authors = [
   {name = "Jamie Smith", email = "smit109@usc.edu"},
@@ -35,7 +35,7 @@ classifiers = [
 
 [tool.poetry]
 name = "cy_serial_bridge"
-version = "0.3.0"
+version = "0.3.1"
 description = "Pure Python driver for using and reconfiguring the CY7C652xx family of USB to SPI/I2C/UART bridge ICs."
 authors = ["Jamie Smith <smit109@usc.edu>"]
 readme = "README.md"
@@ -57,6 +57,7 @@ libusb1 = "^3.0.0"
 pyserial = "^3.5"
 typer = "^0.9"
 rich = "^13.6"
+click = "^8.0"
 
 [tool.poetry.group.dev.dependencies]
 mypy = '^1.8.0'
